<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="com.crashlytics.android.build_id">d79216aa-b1b5-45a6-83d0-cd722c9a2831</string>
    <string name="accept">Accept</string>
    <string name="activity_not_found">Activity not found.</string>
    <string name="app_name">Goofy Glass</string>
    <string name="attributions">Attributions</string>
    <string name="big_ears">Big Ears</string>
    <string name="big_forehead">Big Forehead</string>
    <string name="bloom">Overexposed</string>
    <string name="bug_eyes">Bug Eyes</string>
    <string name="cannot_take_photo_no_sd_card">Cannot take photo. No external media found.</string>
    <string name="chubby_cheeks">Chubby Cheeks</string>
    <string name="circular_ripple">Water Ripple</string>
    <string name="close_app">Close App</string>
    <string name="color_matrix">Color Lens</string>
    <string name="color_shift">Color Shift</string>
    <string name="colorblind">Colorblind</string>
    <string name="colorblind_vision">Colorblind Vision</string>
    <string name="comic_book">Cartoon</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">This app won\'t run unless you update the Android Wear app.</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="conehead">Conehead</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="dilate">Chunkify</string>
    <string name="double_bump_forehead">Double Bump Forehead</string>
    <string name="email">Email</string>
    <string name="emboss">Emboss</string>
    <string name="error_camera">Camera unavailable. Your phone may need to be restarted.</string>
    <string name="error_camera_title">Camera Error</string>
    <string name="error_email_body">Phone details:\nPhone model - {1}\nCarrier - {2}\n</string>
    <string name="extract_color">Extract Color</string>
    <string name="fat_chin">Fat Chin</string>
    <string name="first_name">First Name</string>
    <string name="follow">Follow</string>
    <string name="frozen_glass">Frosted Glass</string>
    <string name="funny_voice_changer">Funny Voice Changer</string>
    <string name="ga_trackingId">UA-33231202-2</string>
    <string name="gallery_not_found">Gallery not found.</string>
    <string name="giveway_games">Giveway Games</string>
    <string name="glass_sphere">Glass Sphere</string>
    <string name="gorilla_nose">Gorilla Nose</string>
    <string name="hate_ads_">Hate ads?</string>
    <string name="help_url">http://market.android.com/support/bin/answer.py?answer=1050566&amp;hl=%lang%&amp;dl=%region%</string>
    <string name="image_import_failed">Failed to load imported image.</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="inverted">Inverted</string>
    <string name="last_name">Last Name</string>
    <string name="learn_more">Learn more</string>
    <string name="leopard">Leopard</string>
    <string name="like">Like</string>
    <string name="loading">Loading</string>
    <string name="low_memory">Low memory. Can not load.</string>
    <string name="mailing_list">Mailing List</string>
    <string name="mirror">Mirror</string>
    <string name="monkey_mouth">Monkey Mouth</string>
    <string name="more_apps">More Apps</string>
    <string name="more_from_giveway">More by Giveway</string>
    <string name="motion_blur">Motion Blur</string>
    <string name="neon">Neon</string>
    <string name="night_vision">Night Vision</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="no_internet_permission">No permission to access internet.</string>
    <string name="no_thanks">No Thanks</string>
    <string name="none">None</string>
    <string name="not_enough_space">Not enough space available.</string>
    <string name="oilify">Oilify</string>
    <string name="old_photo">Old Photo</string>
    <string name="opengl_critical_error">An OpenGL error occurred. This app requires OpenGL ES 2.0. If your phone supports OpenGL ES 2.0 and you are still seeing this message, please contact the developer.</string>
    <string name="opengl_critical_error_title">OpenGL Error</string>
    <string name="palette_painter">Palette Painter</string>
    <string name="picture_failed_text">Could not save photo.\n\nPlease email me if you see this often.</string>
    <string name="picture_failed_title">Take Picture Failed</string>
    <string name="pointy_chin">Pointy Chin</string>
    <string name="predator">Predator</string>
    <string name="random">Random</string>
    <string name="rate">Rate</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_details">Tired of those pesky ads? \n\n Remove them for only a %1$s. \n\n Or join our mailing list and we\'ll remove them for free.</string>
    <string name="remove_and_price">Remove (%1$s)</string>
    <string name="ripple">Ripple</string>
    <string name="save_canceled">Canceling save.</string>
    <string name="scary_voice_changer">Scary Voice Changer</string>
    <string name="select_picture">Select Picture</string>
    <string name="send_mail">Send Mail</string>
    <string name="shapes">Mosaic</string>
    <string name="sketch">Sketch</string>
    <string name="skinny_fat_mirror">Skinny/Fat</string>
    <string name="slap_the_mosquito">Slap the Mosquito</string>
    <string name="small_circles">Circles</string>
    <string name="snarky1">… bending images …</string>
    <string name="snarky2">… tickling openGL …</string>
    <string name="snarky3">… morphing shaders …</string>
    <string name="snarky4">… running zig zags …</string>
    <string name="snarky5">… powering goofy …</string>
    <string name="sobel">Outline</string>
    <string name="spiky_hair">Spiky Hair</string>
    <string name="square_nose">Square Nose</string>
    <string name="squinty_eyes">Squinty Eyes</string>
    <string name="stain_glass">Stain Glass</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_failed">Subscribe failed.</string>
    <string name="subscribe_part_deux">Thanks! We\'ve sent you an email confirmation. As soon as we hear back we\'ll clear the ads. Enjoy.</string>
    <string name="subscribe_question_1">Subscribe to our mailing list and we\'ll remove the ads for free.</string>
    <string name="subscribe_question_2">We typically only send emails once a month.</string>
    <string name="swirl">Swirl</string>
    <string name="tiny_mouth">Tiny Mouth</string>
    <string name="waiting_for_full_quality">Try again. Waiting for full quality file.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
</resources>
