<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:background="@color/popup_secondary_background" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="14dp" android:textColor="@color/text_color" android:id="@+id/rate_btn" android:background="@drawable/main_button_selector" android:padding="@dimen/more_info_icon_padding" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/rate" android:drawableTop="@drawable/ic_rate" android:layout_weight="1.0" />
        <Button android:textSize="14dp" android:textColor="@color/text_color" android:id="@+id/email_btn" android:background="@drawable/main_button_selector" android:padding="@dimen/more_info_icon_padding" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/email" android:drawableTop="@drawable/ic_email" android:layout_weight="1.0" />
        <Button android:textSize="14dp" android:textColor="@color/text_color" android:id="@+id/google_plus_btn" android:background="@drawable/main_button_selector" android:padding="@dimen/more_info_icon_padding" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/follow" android:drawableTop="@drawable/ic_google_plus" android:layout_weight="1.0" />
        <Button android:textSize="14dp" android:textColor="@color/text_color" android:id="@+id/facebook_btn" android:background="@drawable/main_button_selector" android:padding="@dimen/more_info_icon_padding" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/like" android:drawableTop="@drawable/ic_facebook" android:layout_weight="1.0" />
    </LinearLayout>
</merge>
