<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <EditText android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/email" android:layout_width="UNKNOWN_DATA_0xfa01" android:layout_height="wrap_content" android:hint="@string/email" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
    <EditText android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/first_name" android:layout_width="UNKNOWN_DATA_0xfa01" android:layout_height="wrap_content" android:hint="@string/first_name" android:layout_below="@id/email" android:layout_centerHorizontal="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
    <EditText android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/last_name" android:layout_width="UNKNOWN_DATA_0xfa01" android:layout_height="wrap_content" android:hint="@string/last_name" android:layout_below="@id/first_name" android:layout_centerHorizontal="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
    <ProgressBar android:id="@id/progress_spinner" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/email" android:layout_alignBottom="@id/email" android:layout_centerInParent="true" />
    <TextView android:textSize="12sp" android:textStyle="italic" android:textColor="#888" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/email_subtext" android:layout_width="UNKNOWN_DATA_0xfa01" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/subscribe_question_2" android:layout_below="@id/last_name" android:layout_centerHorizontal="true" />
</RelativeLayout>
