<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/rotate_root" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@color/popup_background" android:paddingLeft="@dimen/setting_padding" android:paddingTop="@dimen/setting_padding" android:paddingRight="@dimen/setting_padding" android:layout_width="UNKNOWN_DATA_0x7f090020" android:layout_height="UNKNOWN_DATA_0x7f090020">
        <TextView android:id="@+id/unlock_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/remove_ads" style="@style/PopupTitleText" />
        <View style="@style/PopupTitleSeperator" />
        <TextView android:id="@+id/unlock_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_ads_details" style="@style/PopupMessageText" />
        <View android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0" />
        <View style="@style/PopupButtonLineSeperator" />
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="18sp" android:textColor="#fff" android:id="@+id/cancel_button" android:background="@drawable/main_button_selector" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x3001" android:text="0x1040000" android:layout_weight="1.0" />
            <View style="@style/PopupButtonSeperator" />
            <Button android:textSize="18sp" android:textColor="#fff" android:id="@+id/ok_button" android:background="@drawable/main_button_selector" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x3001" android:text="@string/remove_and_price" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
